Resolves: tdf#92448 check for numeric '.' only if sheet separator is '.'

Change-Id: I427da08eed3fc5daed2bac4d588b66a3f03fd28c